--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wasted</title>
+    <title>Wasted - Приложение для учета расходов</title>
     <style>
         * {
             margin: 0;
@@ -11,51 +11,183 @@
             box-sizing: border-box;
         }
 
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(40px) scale(0.95);
+                filter: blur(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+                filter: blur(0px);
+            }
+        }
+
+        @keyframes fadeInScale {
+            from {
+                opacity: 0;
+                transform: scale(0.8) rotate(-2deg);
+                filter: blur(20px);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1) rotate(0deg);
+                filter: blur(0px);
+            }
+        }
+
+        .fade-in-up {
+            opacity: 0;
+            transform: translateY(40px) scale(0.95);
+            filter: blur(10px);
+            animation: fadeInUp 0.8s ease-out forwards;
+        }
+
+        .fade-in-scale {
+            opacity: 0;
+            transform: scale(0.8) rotate(-2deg);
+            filter: blur(20px);
+            animation: fadeInScale 0.6s ease-out forwards;
+        }
+
+        /* Задержки для последовательного появления */
+        .logo.fade-in-up {
+            animation-delay: 0.4s;
+        }
+
+        .subtitle.fade-in-up {
+            animation-delay: 0.8s;
+        }
+
+        .buttons .btn:nth-child(1) {
+            animation-delay: 1.2s;
+        }
+
+        .buttons .btn:nth-child(2) {
+            animation-delay: 1.6s;
+        }
+
+
+        .animate {
+            animation: fadeInUp 0.8s ease-out forwards;
+        }
+
+        .animate-scale {
+            animation: fadeInScale 0.6s ease-out forwards;
+        }
+
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            background: linear-gradient(135deg, #0c0c0c 0%, #1a1a2e 50%, #16213e 100%);
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
+            color: #ffffff;
+            text-align: center;
+            overflow-x: hidden;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background:
+                radial-gradient(circle at 20% 50%, rgba(120, 119, 198, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 20%, rgba(255, 119, 198, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 40% 80%, rgba(120, 255, 198, 0.1) 0%, transparent 50%);
+            animation: float 20s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0px) rotate(0deg); }
+            33% { transform: translateY(-10px) rotate(1deg); }
+            66% { transform: translateY(10px) rotate(-1deg); }
         }
 
         .container {
-            text-align: center;
-            padding: 40px 20px;
+            max-width: 600px;
+            padding: 3rem;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 24px;
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow:
+                0 8px 32px rgba(0, 0, 0, 0.3),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+            position: relative;
+            overflow: hidden;
         }
 
-        .title {
+        .container::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.03), transparent);
+            animation: shimmer 4s ease-in-out infinite;
+            pointer-events: none;
+        }
+
+        @keyframes shimmer {
+            0% { transform: translateX(-100%) translateY(-100%) rotate(45deg); }
+            100% { transform: translateX(100%) translateY(100%) rotate(45deg); }
+        }
+
+        .logo {
             font-size: 4rem;
-            font-weight: 700;
-            color: white;
-            text-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            margin-bottom: 60px;
+            font-weight: 800;
+            margin-bottom: 1.5rem;
+            background: linear-gradient(135deg, #00d4ff, #ffffff, #ff6b9d);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-shadow: 0 0 30px rgba(0, 212, 255, 0.5);
             letter-spacing: -2px;
+        }
+
+        .subtitle {
+            font-size: 1.3rem;
+            margin-bottom: 2.5rem;
+            opacity: 0.8;
+            line-height: 1.7;
+            color: #e0e0e0;
+            font-weight: 300;
+            max-width: 400px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .buttons {
             display: flex;
             flex-direction: column;
-            gap: 25px;
-            max-width: 300px;
-            margin: 0 auto;
+            gap: 1rem;
+            width: 100%;
         }
 
         .btn {
-            display: block;
-            padding: 18px 40px;
-            background: rgba(255,255,255,0.1);
-            color: white;
-            text-decoration: none;
-            border-radius: 50px;
-            font-weight: 600;
+            display: inline-block;
+            padding: 1.2rem 2.5rem;
             font-size: 1.1rem;
-            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            border: 2px solid rgba(255,255,255,0.2);
-            backdrop-filter: blur(10px);
+            font-weight: 600;
+            text-decoration: none;
+            color: white;
+            border: none;
+            border-radius: 16px;
+            transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+            text-align: center;
             position: relative;
             overflow: hidden;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .btn::before {
@@ -65,7 +197,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
             transition: left 0.5s;
         }
 
@@ -74,65 +206,98 @@
         }
 
         .btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 15px 35px rgba(0,0,0,0.2);
-            background: rgba(255,255,255,0.15);
-            border-color: rgba(255,255,255,0.4);
+            transform: translateY(-3px) scale(1.02);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
         }
 
-        .btn:active {
-            transform: translateY(-1px);
+        .btn-primary {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            box-shadow: 0 4px 20px rgba(102, 126, 234, 0.3);
         }
 
-        .btn:nth-child(1) {
-            animation: slideInUp 0.6s ease-out;
+        .btn-primary:hover {
+            background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
+            box-shadow: 0 15px 50px rgba(102, 126, 234, 0.4);
         }
 
-        .btn:nth-child(2) {
-            animation: slideInUp 0.6s ease-out 0.1s both;
+        .btn-secondary {
+            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            box-shadow: 0 4px 20px rgba(240, 147, 251, 0.3);
         }
 
-        .btn:nth-child(3) {
-            animation: slideInUp 0.6s ease-out 0.2s both;
+        .btn-secondary:hover {
+            background: linear-gradient(135deg, #f5576c 0%, #f093fb 100%);
+            box-shadow: 0 15px 50px rgba(240, 147, 251, 0.4);
         }
 
-        @keyframes slideInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
+        @media (max-width: 768px) {
+            .container {
+                margin: 1rem;
+                padding: 2rem;
+                border-radius: 20px;
             }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
 
-        @media (max-width: 480px) {
-            .title {
+            .logo {
                 font-size: 3rem;
-                margin-bottom: 40px;
+                letter-spacing: -1px;
             }
 
-            .buttons {
-                gap: 20px;
+            .subtitle {
+                font-size: 1.1rem;
+                margin-bottom: 2rem;
             }
 
             .btn {
-                padding: 16px 30px;
+                padding: 1rem 2rem;
                 font-size: 1rem;
+                border-radius: 14px;
             }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">Wasted</h1>
+    <div class="container fade-in-scale">
+        <h1 class="logo fade-in-up">
+            Wasted - Money Manager
+        </h1>
+        <p class="subtitle fade-in-up">
+            <strong>Умное приложение</strong> для учета расходов и доходов<br>
+            Контролируйте свои финансы с <em>легкостью</em> и стилем!
+        </p>
 
         <div class="buttons">
-            <a href="#" class="btn">Download</a>
-            <a href="#" class="btn">Features</a>
-            <a href="#" class="btn">Contact</a>
+            <a href="#" class="btn btn-primary fade-in-up" id="app-link">
+                📱 Скачать приложение
+            </a>
+            <a href="https://t.me/boroda_ios" class="btn btn-secondary fade-in-up" target="_blank">
+                💬 Связаться со мной
+            </a>
         </div>
     </div>
+
+    <script>
+        // Анимации теперь запускаются автоматически через CSS
+
+        // Здесь можно добавить логику для определения платформы и установки правильной ссылки на приложение
+        const appLink = document.getElementById('app-link');
+
+        // Определение платформы пользователя
+        const userAgent = navigator.userAgent.toLowerCase();
+        const isIOS = /iphone|ipad|ipod/.test(userAgent);
+        const isAndroid = /android/.test(userAgent);
+
+        if (isIOS) {
+            appLink.href = 'https://apps.apple.com/us/app/wasted-money-manager/id6752341613';
+            appLink.textContent = '📱 Скачать в App Store';
+        } else if (isAndroid) {
+            appLink.href = 'https://play.google.com/store/apps/details?id=com.yourcompany.wasted';
+            appLink.textContent = '📱 Скачать в Google Play';
+        } else {
+            appLink.href = '#';
+            appLink.textContent = '📱 Доступно для iOS и Android';
+            appLink.style.opacity = '0.6';
+            appLink.style.cursor = 'default';
+        }
+    </script>
 </body>
 </html>
